connected to server in server.js. Added middlewear and set view engine. Listening on port 3000

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://legz444:<sei123>@cluster0.gumqi.mongodb.net/serverReview?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://legz444:t1GFuyssyXUsuHfo@cluster0.gumqi.mongodb.net/serverReview?retryWrites=true&w=majority
